# hands-on-e2e-ai

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py  eval_retriever_extended.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  graph.py  retrieval_generation.py  tools.py
apps/api/src/api/agents/prompts/: intent_router_agent.yaml  qna_agent.yaml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py  models.py
apps/api/src/api/api/processors/: submit_feedback.py
apps/api/src/api/core/: config.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: app.py
apps/items_mcp_server/: Dockerfile  pyproject.toml
apps/items_mcp_server/core/: config.py
apps/items_mcp_server/src/items_mcp_server/: main.py  utils.py
apps/reviews_mcp_server/: Dockerfile  pyproject.toml
apps/reviews_mcp_server/core/: config.py
apps/reviews_mcp_server/src/reviews_mcp_server/: main.py  utils.py
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-preprocessing-items.ipynb  03-RAG-pipeline.ipynb  04-Observability-foundations.ipynb  05_RAG-Eval-Dataset.ipynb  06-RAG-Evals.ipynb
notebooks/week_2/: 01-Structured-Outputs-Intro.ipynb  02-Structured-Outputs-RAG-Pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Management.ipynb  06-Eval-Dataset-Large.ipynb
notebooks/week_2/prompts/: retrieval_generation.yaml
notebooks/week_3/: 01-LangGraph-Intro.ipynb  02-Query-Rewriting.ipynb  03-Router.ipynb  04-Agent-Single-Turn.ipynb
notebooks/week_4/: 01-Multi-Turn-Agent.ipynb  02-Multiple-Tools.ipynb  03-Human-Feedback.ipynb  04-MCP.ipynb
