[project]
name = "reviews-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "cg3167@columbia.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.4.4",
    "google-genai>=2.10.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "qdrant-client>=1.18.0",
]

[project.scripts]
reviews-mcp-server = "reviews_mcp_server:main"

[build-system]
requires = ["uv_build>=0.11.27,<0.12.0"]
build-backend = "uv_build"
